# merobot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: config.json
docs/: architecture.md
src/merobot/: __init__.py  __main__.py  app.py  config.py  constants.py
src/merobot/agents/: __init__.py  context.py  loop.py  tools.py
src/merobot/handler/: handler.py  message_bus.py  messages.py
src/merobot/handler/channels/: base.py  telegram.py
src/merobot/handler/session/: session.py
src/merobot/providers/llm/: __init__.py  base.py  litellm_provider.py  llmapi_provider.py
src/merobot/tools/: __init__.py  base.py  code_executor.py  date_time.py  file_ops.py  query_db.py  sub_agent.py  weather.py  web_scrape.py  web_search.py
tests/: test_agent_loop.py  test_telegram_handler.py
