[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merobot"
version = "0.0.1"
description = "I am trying my version of OpenClaw personal assistant."
readme = "README.md"
authors = [
    { name = "Suraj Airi", email = "surajairi.ml@gmail.com" }
]
license = { text = "MIT license" }
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "loguru",
    "python-dotenv>=1.2.1",
    "litellm>=1.50.0",
    "jsonschema>=4.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

